<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlyt"
    android:background="@drawable/skyblue"
    tools:context=".LipaMpesa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="167dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_lipa"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/mNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_round"
            android:hint="@string/txt_mob"
            android:inputType="phone" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/edit_round"
            android:hint="@string/txt_amnt"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/pay_btn"
            android:text="@string/btn_Pay" />

        <TextView android:id="@+id/link_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="24dp"
            android:layout_margin="25dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="Back to Main Menu"
            android:gravity="center"
            android:textSize="16dp"/>
    </LinearLayout>
</RelativeLayout>