<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reef"
    android:id="@+id/conslay"
    tools:context=".Accounts">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView android:src="@drawable/preciousfam"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="14dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_acc"
                android:textStyle="bold"
                android:typeface="serif"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"/>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/edit_round"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/txt_un" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/edit_round"
                    android:inputType="textPassword"
                    android:hint="@string/txt_pass"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:background="@drawable/login_btn"
                android:text="@string/btn_login"/>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_mpesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:background="@drawable/round_btn"
                android:text="@string/txt_depo"/>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>